@@ -8,6 +8,8 @@
 % to drive the experiment.  Variables in this section define the number 
 % of coils in the 3dfm pole geometry, the number of DAQ Analog-Out 
 % channels on the DAQ board, the identity of the DAQ board, etc...
+
+% DAQid = 'PCI-6713';
 DAQid = 'daqtest';
 nDACout = 8;
 nCoils = 6;
@@ -18,11 +20,11 @@ DAQ_sampling_rate = 1000;  % [Hz]
 % experiment, and any "crucial points" that define a change of state in the
 % experiment's progression.  The pole geometry used is also defined here.
 pole_geometry = 'pole4-flat';
-pulse_voltages = [1 1 1 1 1 1 1];
+pulse_voltages = [1 1 1 1 1];
 start_time = 0;
-times_to_activate_pulses = [10 50 70 90 110 130 170];
-times_to_deactivate_pulses = [20 60 80 100 120 140 180];
-end_time = 220;
+times_to_activate_pulses = [5 25 35 45 65];
+times_to_deactivate_pulses = [10 30 40 50 70];
+end_time = 75;
 
 % INITIAL MATH:  precondition the output matrix to all zeros and define the
 % time vector that will give normal mortals an idea of what's going on.
@@ -68,6 +70,6 @@ end
 
 % Start experiment.  Call DACoperator. Call pulnix software. etc..
 Nrepeat = 1;
-channels = [1:8];
+channels = [0:nDACout-1]';
 Vrange = [-10 10];
 DACoperator(signal, Nrepeat, DAQid, channels, DAQ_sampling_rate, Vrange);
